refactor: alinhar projeto com manual HTML de configuração
BREAKING CHANGE: Atualização completa para seguir especificações do manual

- Porta backend: 3001 → 3000 (alinhado com manual)
- Porta frontend: 5173 → 80 (acesso direto sem porta)
- PostgreSQL: porta externa 5433 → 5432 (padrão)
- docker-compose.yml: estrutura simplificada com node:18-alpine
- Credenciais admin atualizadas: contato@reiscelulares.com.br
- URLs CORS: atualizadas para porta 80 frontend
- IP Windows: 192.168.100.232 (mantido)
- Documentação atualizada (README, SETUP_LOCAL, STATUS_FINAL)

Arquivos modificados:
- .env.template.md: PORT=3000, credenciais e CORS
- docker-compose.yml: estrutura simplificada sem build
- backend/server.js: PORT padrão 3000
- frontend/.env.example: URLs com porta 3000
- Documentação: portas e URLs atualizadas

Benefícios:
- Acesso frontend sem porta (http://192.168.100.232)
- Porta backend padrão HTTP (3000)
- Deploy s- Deploy s- Deploy s- Deploy s- Deploy s- Deploy s- Deploy s- Deploy s- Deploy s- Deplia: manual-reistech.html

--- a/.env.template.md
+++ b/.env.template.md
@@ -14,7 +14,7 @@ APP_VERSION="1.0.0"
 LOG_LEVEL="debug"
 NODE_ENV=development
 API_PREFIX=/api
-PORT=3001
+PORT=3000
 
 # ============ 2. BANCO DE DADOS POSTGRESQL ============
 # Para Docker Compose: use "postgres" como host
@@ -49,9 +49,9 @@ BCRYPT_ROUNDS=12
 
 # ============ 5. ADMIN INICIAL ============
 # Este usuário é criado no primeiro seed da aplicação
-ADMIN_EMAIL="admin@reiscelulares.com.br"
-ADMIN_PASSWORD="sua_senha_forte"
-ADMIN_NAME="Administrador"
+ADMIN_EMAIL="contato@reiscelulares.com.br"
+ADMIN_PASSWORD="admin@reiscelulares"
+ADMIN_NAME="Junior Reis"
 
 # ============ 6. E-MAIL (SMTP) ============
 # Exemplo com Hostinger/Gmail/SendGrid
@@ -83,19 +83,19 @@ CDN_BUCKET=
 
 # ============ 10. DOMÍNIOS E CORS ============
 # Para desenvolvimento local:
-#   Backend: http://localhost:3001
-#   Frontend: http://localhost:5173
+#   Backend: http://localhost:3000
+#   Frontend: http://localhost
 #
 # Para acessar via IP Windows:
-#   Backend: http://192.168.100.232:3001
-#   Frontend: http://192.168.100.232:5173
+#   Backend: http://192.168.100.232:3000
+#   Frontend: http://192.168.100.232
 #
 # CORS_WHITELIST deve incluir TODAS as origens que acessarão a API
 
-API_DOMAIN="http://192.168.100.232:3001"
-WEB_DOMAIN="http://192.168.100.232:5173"
-ACME_EMAIL="admin@reiscelulares.com.br"
-CORS_WHITELIST="http://localhost:5173,http://localhost:5174,http://192.168.100.232:5173,http://192.168.100.232:5174,http://127.0.0.1:5173"
+API_DOMAIN="http://192.168.100.232:3000"
+WEB_DOMAIN="http://192.168.100.232"
+ACME_EMAIL="contato@reiscelulares.com.br"
+CORS_WHITELIST="http://localhost,http://192.168.100.232,http://127.0.0.1"
 
 # ============ 11. WHATSAPP ============
 WHATSAPP_SESSION_PATH=./whatsapp-sessions
