--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,12 +3,12 @@
 # ============================================
 
 # URLs do Backend API
-# Para desenvolvimento local (macOS): localhost:3001
-# Para Windows na rede: 192.168.100.232:3001 (exemplo)
+# Para desenvolvimento local (macOS): localhost:3000
+# Para Windows na rede: 192.168.100.232:3000 (exemplo)
 # Para produção: https://api.seu-dominio.com
 
-VITE_API_URL=http://localhost:3001
-VITE_WS_URL=ws://localhost:3001
+VITE_API_URL=http://192.168.100.232:3000
+VITE_WS_URL=ws://192.168.100.232:3000
 
 # Informações da Aplicação
 VITE_APP_NAME=Reistech
