chore: atualização solicitada em 12/02/2026

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,19 @@
 # ============================================================================
-# BACKEND - CONFIGURAÇÃO PARA EXECUÇÃO DIRETA (NPM RUN DEV)
+# REISTECH-DEEPSEEK - CONFIGURAÇÃO DOCKER COMPOSE (RAIZ)
 # ============================================================================
+# Este arquivo é usado pelo docker-compose.yml para configurar todos os serviços
+# Copie para .env e ajuste as credenciais reais
+# IMPORTANTE: O arquivo .env real NUNCA deve ser commitado (está no .gitignore)
 
-# Database
-DB_HOST=localhost
+APP_NAME=Reistech
+APP_VERSION=1.0.0
+LOG_LEVEL=debug
+NODE_ENV=development
+API_PREFIX=/api
+PORT=3000
+
+# PostgreSQL
+DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=reistechdb
 DB_USER=reistechuser
@@ -14,7 +24,7 @@ DB_POOL_MIN=2
 DB_POOL_MAX=10
 
 # Redis
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=
 REDIS_URL=redis://${REDIS_HOST}:${REDIS_PORT}
@@ -25,7 +35,7 @@ JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-in-production-min-64-cha
 JWT_ACCESS_EXPIRY=15m
 JWT_REFRESH_EXPIRY=30d
 
-# Admin User (for seeds)
+# Admin
 ADMIN_EMAIL=contato@reiscelulares.com.br
 ADMIN_PASSWORD=admin@reiscelulares
 ADMIN_NAME=Junior Reis
@@ -38,23 +48,28 @@ SMTP_USER=contato@reiscelulares.com.br
 SMTP_PASSWORD=your-smtp-password-here
 SMTP_FROM=Reistech <contato@reiscelulares.com.br>
 
-# App
-NODE_ENV=development
-PORT=3000
-LOG_LEVEL=info
-API_PREFIX=/api
-
-# CORS
-CORS_ORIGIN=http://localhost:5173,http://localhost,http://127.0.0.1
+# CORS e Domínios
+# Para desenvolvimento local, use localhost
+# Para Docker remoto (ex: Windows), use o IP da máquina (ex: 192.168.100.232)
+API_DOMAIN=http://192.168.100.232:3000
+WEB_DOMAIN=http://192.168.100.232
+ACME_EMAIL=contato@reiscelulares.com.br
+CORS_ORIGIN=http://localhost,http://192.168.100.232,http://127.0.0.1
 
 # WhatsApp
 WHATSAPP_SESSION_PATH=./whatsapp-sessions
 WHATSAPP_PUPPETEER_ARGS=--no-sandbox,--disable-setuid-sandbox
 
-# File Upload
-MAX_FILE_SIZE=10485760
+# Uploads
 UPLOAD_PATH=./uploads
 UPLOAD_DIR=./uploads
+MAX_FILE_SIZE=10485760
+
+# Backup
+BACKUP_DIR=./backups
+BACKUP_RETENTION_DAYS=30
+BACKUP_SCHEDULE=0 2 * * *
+BACKUP_ENABLED=true
 
 # Timezone
 TZ=America/Sao_Paulo
