--- a/backend/package.json
+++ b/backend/package.json
@@ -31,10 +31,10 @@
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
+    "cpf-cnpj-validator": "^1.0.3",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.10.0",
     "express-validator": "^6.15.0",
     "helmet": "^7.2.0",
