--- a/docs/api_endpoints_documentacao.yaml
+++ b/docs/api_endpoints_documentacao.yaml
@@ -448,10 +448,11 @@ paths:
                     items:
                       $ref: '#/components/schemas/CatalogoItem'
 
+  /catalogo/import:
     post:
       tags: [Catálogo]
-      summary: Adicionar item ao catálogo
-      description: Cria novo produto/serviço
+      summary: Importar catálogo via CSV
+      description: Importa itens do catálogo a partir de dados CSV
       security:
         - bearerAuth: []
       requestBody:
@@ -459,10 +460,59 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CatalogoItemCreate'
+              type: object
+              required: [items]
+              properties:
+                items:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/CatalogoItemCreate'
       responses:
-        '201':
-          description: Item criado com sucesso
+        '200':
+          description: Catálogo importado com sucesso
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  data:
+                    type: object
+                    properties:
+                      imported:
+                        type: integer
+                      errors:
+                        type: integer
+        '400':
+          description: Dados de importação inválidos
+        '401':
+          description: Não autenticado
+        '403':
+          description: Não autorizado
+
+  /catalogo/whatsapp-text:
+    get:
+      tags: [Catálogo]
+      summary: Obter catálogo formatado para WhatsApp
+      description: Retorna o catálogo formatado como texto para envio via WhatsApp
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Texto do catálogo gerado
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  data:
+                    type: object
+                    properties:
+                      text:
+                        type: string
 
   /catalogo/{id}:
     put:
@@ -502,6 +552,312 @@ paths:
       responses:
         '200':
           description: Item removido com sucesso
+
+  # ============ CONVERSAS ============
+  /conversas:
+    get:
+      tags: [Conversas]
+      summary: Listar conversas com clientes
+      description: Retorna lista paginada de conversas agrupadas por cliente
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: telefone
+          in: query
+          description: Filtrar por telefone (busca parcial)
+          schema:
+            type: string
+        - name: page
+          in: query
+          schema:
+            type: integer
+            default: 1
+        - name: limit
+          in: query
+          schema:
+            type: integer
+            default: 20
+      responses:
+        '200':
+          description: Lista paginada de conversas
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  data:
+                    type: object
+                    properties:
+                      data:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/Conversa'
+                      pagination:
+                        $ref: '#/components/schemas/Pagination'
+        '401':
+          description: Não autenticado
+
+  /conversas/last-messages:
+    get:
+      tags: [Conversas]
+      summary: Últimas mensagens recebidas
+      description: Retorna as mensagens mais recentes de todos os clientes
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: limit
+          in: query
+          schema:
+            type: integer
+            default: 10
+      responses:
+        '200':
+          description: Lista de últimas mensagens
+        '401':
+          description: Não autenticado
+
+  /conversas/{clienteId}/mensagens:
+    get:
+      tags: [Conversas]
+      summary: Histórico de mensagens com cliente
+      description: Retorna todas as mensagens de um cliente específico
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: clienteId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Histórico de mensagens
+        '401':
+          description: Não autenticado
+        '404':
+          description: Cliente não encontrado
+
+  /conversas/{clienteId}/dossie:
+    get:
+      tags: [Conversas]
+      summary: Dossiê do cliente
+      description: Retorna o dossiê completo construído pelo DossierBuilder com dados coletados, intenção detectada e sugestão de abordagem
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: clienteId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Dossiê do cliente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  data:
+                    type: object
+                    properties:
+                      sessionId:
+                        type: string
+                      tipoFluxo:
+                        type: string
+                      prioridade:
+                        type: string
+                        enum: [ALTA, MEDIA, BAIXA]
+                      intencaoDetectada:
+                        type: string
+                      dadosColetados:
+                        type: object
+                      pontosPendentes:
+                        type: array
+                        items:
+                          type: string
+                      sugestaoAbordagem:
+                        type: string
+                      completeness:
+                        type: number
+        '401':
+          description: Não autenticado
+        '404':
+          description: Cliente não encontrado
+
+  /conversas/{clienteId}/mensagem:
+    post:
+      tags: [Conversas]
+      summary: Enviar mensagem para cliente
+      description: Envia uma mensagem via WhatsApp para o cliente
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: clienteId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [mensagem]
+              properties:
+                mensagem:
+                  type: string
+      responses:
+        '200':
+          description: Mensagem enviada com sucesso
+        '400':
+          description: Mensagem é obrigatória
+        '404':
+          description: Cliente não encontrado
+        '503':
+          description: WhatsApp não conectado
+
+  # ============ WORKSPACE ============
+  /workspaces:
+    get:
+      tags: [Workspace]
+      summary: Listar workspaces
+      description: Retorna todos os workspaces do sistema
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Lista de workspaces
+    post:
+      tags: [Workspace]
+      summary: Criar workspace
+      description: Cria um novo workspace com configuração baseada em pack
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [nome, pack_key]
+              properties:
+                nome:
+                  type: string
+                pack_key:
+                  type: string
+      responses:
+        '201':
+          description: Workspace criado
+        '404':
+          description: Pack não encontrado
+
+  /workspaces/packs:
+    get:
+      tags: [Workspace]
+      summary: Listar packs disponíveis
+      description: Retorna a lista de packs verticais disponíveis para criação de workspaces
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Lista de packs
+
+  /workspaces/{id}:
+    get:
+      tags: [Workspace]
+      summary: Buscar workspace por ID
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Workspace encontrado
+        '404':
+          description: Workspace não encontrado
+    put:
+      tags: [Workspace]
+      summary: Atualizar workspace
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                nome:
+                  type: string
+                pack_key:
+                  type: string
+                ativo:
+                  type: boolean
+      responses:
+        '200':
+          description: Workspace atualizado
+        '404':
+          description: Workspace não encontrado
+    delete:
+      tags: [Workspace]
+      summary: Deletar workspace
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Workspace deletado
+        '404':
+          description: Workspace não encontrado
+
+  /workspaces/{workspaceId}/reload-rules:
+    post:
+      tags: [Workspace]
+      summary: Recarregar regras do workspace
+      description: Invalida o cache de regras de extração e sincroniza com outras instâncias via Redis Pub/Sub
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: workspaceId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Regras recarregadas com sucesso
+        '404':
+          description: Workspace não encontrado
+        '500':
+          description: Erro interno
 
 components:
   securitySchemes:
