ci(backend): adiciona job de testes de integração com PostgreSQL e Redis
Implementa novo job no GitHub Actions que:
- Cria serviços efêmeros de PostgreSQL 15 e Redis 7
- Executa migrações do banco antes dos testes
- Roda testes de integração via novo script 'test:integration'
- Aguarda health checks antes de executar

Secrets necessários (devem ser configurados no GitHub):
- JWT_SECRET_TEST
- JWT_REFRESH_SECRET_TEST

O job 'build' agora depende também do 'test-integration' para garantir
que todas as validações passem antes de criar imagens Docker.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,6 +50,89 @@ jobs:
           flags: backend
           name: backend-coverage
 
+  # Backend integration tests (with PostgreSQL and Redis)
+  test-integration:
+    name: Backend Integration Tests
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
+
+    services:
+      postgres:
+        image: postgres:15-alpine
+        env:
+          POSTGRES_DB: reistech_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Wait for PostgreSQL
+        run: |
+          until pg_isready -h localhost -p 5432 -U postgres; do
+            echo "Aguardando PostgreSQL..."
+            sleep 2
+          done
+        env:
+          PGPASSWORD: postgres
+
+      - name: Run migrations
+        run: npm run migrate up
+        env:
+          NODE_ENV: test
+          DB_HOST: localhost
+          DB_PORT: 5432
+          DB_NAME: reistech_test
+          DB_USER: postgres
+          DB_PASSWORD: postgres
+          REDIS_URL: redis://localhost:6379
+          JWT_SECRET: ${{ secrets.JWT_SECRET_TEST }}
+          JWT_REFRESH_SECRET: ${{ secrets.JWT_REFRESH_SECRET_TEST }}
+
+      - name: Run integration tests
+        run: npm run test:integration
+        env:
+          NODE_ENV: test
+          DB_HOST: localhost
+          DB_PORT: 5432
+          DB_NAME: reistech_test
+          DB_USER: postgres
+          DB_PASSWORD: postgres
+          REDIS_URL: redis://localhost:6379
+          JWT_SECRET: ${{ secrets.JWT_SECRET_TEST }}
+          JWT_REFRESH_SECRET: ${{ secrets.JWT_REFRESH_SECRET_TEST }}
+          ADMIN_EMAIL: admin@test.com
+          ADMIN_PASSWORD: test123
+
   # Frontend tests and lint
   frontend:
     runs-on: ubuntu-latest
@@ -96,7 +179,7 @@ jobs:
 
   # Build Docker images
   build:
-    needs: [backend, frontend]
+    needs: [backend, test-integration, frontend]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
     
