docs(continue): adiciona template de configuração da extensão Continue com DeepSeek
Implementa configuração padronizada para o time:
- Template de config.json com comandos personalizados (/review, /explain, /test, /fix)
- README com instruções de setup e troubleshooting
- Proteção de chaves de API via .gitignore
- Comandos otimizados para o contexto do projeto ReisTech

Os desenvolvedores devem copiar o template e adicionar suas próprias chaves
da plataforma DeepSeek para habilitar assistência de IA no VS Code.

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,11 @@ coverage/
 *.swo
 *~
 
+# Continue AI Extension (proteger chaves de API)
+.continue/config.json
+!.continue/config.json.template
+!.continue/README.md
+
 # OS
 .DS_Store
 Thumbs.db
